# PitchCraftAgent

./: .gitignore  FLOW.md  README.md
backend/: guide.txt  main.py  pyproject.toml
backend/src/app/: main.py
backend/src/app/aws/: s3.py
backend/src/app/core/: config.py  db.py
backend/src/app/routers/: agent.py  auth.py  customer.py
backend/src/app/schemas/: auth.py  customer.py  excel.py  ppt.py  tables.py
backend/src/app/services/: customer.py
backend/src/app/services/auth/: auth_service.py  google.py  jwt.py
backend/src/pipeline/: llm.py
backend/src/pipeline/agents/: excel_agent.py  research_agent.py
backend/src/pipeline/agents/output/: questionnaire_output.json  questionnaire_output.xlsx
backend/src/pipeline/agents/ppt_agent/: ppt_agent.py  prompt.py  reserach_agent.py  schema.py  tools.py
backend/src/pipeline/agents/ppt_agent/assets/icons/: _fallback_map.json
backend/src/pipeline/agents/ppt_agent/modal/: flux_client.py
backend/src/pipeline/agents/ppt_agent/nodes/: __init__.py  image_generator.py  ppt_renderer.py  visual_planner.py
backend/src/pipeline/agents/ppt_agent/scripts/: __init__.py
backend/src/pipeline/agents/ppt_agent/scripts/content/: __init__.py  expand.py
backend/src/pipeline/agents/ppt_agent/scripts/layouts/: __init__.py  bullets_only.py  cta.py  (+5 more)
backend/src/pipeline/modal/: flux.py  gemma.py  local.py
backend/src/pipeline/prompts/: excel_prompt.py  research_prompt.py
backend/src/pipeline/rfps/: erpSystem.txt
backend/src/pipeline/tools/: web_search.py
backend/src/sample/: Usecase1.json  Usecase2.json  sales.json
(+40 files in other folders)
